--- a/.github/workflows/kms.yaml
+++ b/.github/workflows/kms.yaml
@@ -5,7 +5,11 @@ name: GCS Deployment
 on:
   push:
     branches: [ main ]
-
+    
+permissions:
+  id-token: write  # Allow GitHub Actions to request OIDC tokens
+  contents: read   # Optional: If your workflow accesses the repository contents
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "deploy"
