--- a/.github/workflows/kms.yaml
+++ b/.github/workflows/kms.yaml
@@ -33,5 +33,6 @@ jobs:
 
     - name: Deploy via GCS
       run: |
+        gsutil ls
         gsutil -m rm -rf gs://cloudkmsga/* || echo "$?"
         gsutil -m cp -r * gs://cloudkmsga/
