--- a/.github/workflows/kms.yaml
+++ b/.github/workflows/kms.yaml
@@ -33,6 +33,7 @@ jobs:
 
     - name: Deploy via GCS
       run: |
+        gcloud --version
         gsutil ls
         gsutil -m rm -rf gs://cloudkmsga/* || echo "$?"
         gsutil -m cp -r * gs://cloudkmsga/
