--- a/.github/workflows/kms.yaml
+++ b/.github/workflows/kms.yaml
@@ -20,6 +20,7 @@ jobs:
         with:
           workload_identity_provider: "projects/444751431907/locations/global/workloadIdentityPools/cicd-github-action-pool-ash/providers/cicd-github-actions-provider-ash"
           service_account: "cicd-poc-sa-ash@cloudkmsgithubactions.iam.gserviceaccount.com"
+          token_format: "access_token"  # ✅ Ensures correct token format
        
       - name: Verify Authentication
         run: |
