--- a/.github/workflows/kms.yaml
+++ b/.github/workflows/kms.yaml
@@ -24,6 +24,6 @@ jobs:
       - name: Upload File to GCS
         run: |
           echo "Creating test2 file..."
-          echo "Hello from GitHub Actions!" > test2-file.txt
+          echo "Hello from GitHub Actions!" > test2.txt
           echo "Uploading file..."
           gcloud storage cp test2.txt gs://cloudkmsga/ --log-http
